deploy/server/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: greeter
spec:
  selector:
    app: grpc-greeter
  type: NodePort
  ports:
  - name: greeter
    port: 8080
    targetPort: 8080
    nodePort: 30080
