deploy/server/destinationrule.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: greeter
spec:
  host: greeter
  trafficPolicy:
    loadBalancer:
      simple: LEAST_REQUEST
    connectionPool:
      tcp:
        maxConnections: 5
        connectTimeout: 10s
      http:
        http2MaxRequests: 100
        maxRequestsPerConnection: 10
        maxRetries: 100
        idleTimeout: 1h
    outlierDetection:
      consecutive5xxErrors: 10
      interval: 1m
      baseEjectionTime: 30s
      maxEjectionPercent: 100
