deploy/server/virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: greeter-route
spec:
  hosts:
  - greeter
  http:
  - route:
    - destination:
        host: greeter
    retries:
      attempts: 2
      perTryTimeout: 2s
      retryOn: gateway-error,connect-failure,refused-stream
